...
        android:id="@+id/txUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10.dp"
        android:text="@string/tc_username"
        android:textSize="20.dp"
        app:layout_constraintBottom_toBottomOf="@+id/action_logout"
        app:layout_constraintEnd_toStartOf="@+id/action_logout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/action_logout" />

    <Button
        android:id="@+id/action_logout"
...
